--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,16 @@ html {
     font-size: 62.5%;
 }
 
+header{
+    margin: 0;
+}
 header h1 {
     text-align: center;
     font-family: 'Jolly Lodger', cursive;
     font-size: 9.6rem;
     background-color: black;
     padding: 1rem;
+    margin-bottom: 0;
 }
 
 /* 
@@ -35,6 +39,7 @@ font-family: 'Jolly Lodger', cursive;
     font-size: 4.8rem;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0;
 }
 
 .encabezado {
@@ -84,8 +89,20 @@ aside{
     text-align: left;
     border-bottom: black;
     border-style: solid;
-    margin-right: 15rem;
-    margin-top: 4rem;
+width: 10rem;
+}
+.aside{
+    margin-left: 2rem;
+}
+
+.filtro-adidas{
+    text-transform: uppercase;
+    font-size: 1.8rem;
+    text-align: left;
+    border-bottom: black;
+    border-style: solid;
+    margin-right: 100rem;
+    margin-top: 2rem;
 }
 
 h2 {
@@ -155,6 +172,7 @@ h2 {
     border-style: solid;
     box-shadow: 0.3rem 0.3rem 0.5rem grey;
     font-size: 1.4rem;
+    width: 30rem;
 }
 
 .adidas-negro {
@@ -278,6 +296,11 @@ grid-area: im2;
     justify-self: center;
     grid-column-start: 3;
     grid-column-end: 4;
+}
+
+.container-fluid{
+    padding-left: 0;
+    padding-right: 0;
 }
 
 @media (max-width: 768px){
