--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,17 @@
-header{
-    background-color: blue;
+@import "./utilities/variables";
+@import "./utilities/mixin";
+@import "./layout/aside";
+@import "./layout/footer";
+@import "./layout/header";
+@import "./layout/main-adidas";
+@import "./layout/main-contacto";
+@import "./layout/main-hot-sale";
+@import "./layout/main-index";
+@import "./layout/main-nike";
+@import "./layout/media425";
+@import "./layout/media768";
+@import "./components/botones";
+@import "./components/bootstrap";
+@import "./base/typo";
+@import "./base/reset";
+
