--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ main a {
   font-size: 1.1rem;
 }
 
-section-principal {
+.section-principal {
   text-align: center;
   width: 100%;
   height: 70rem;
