--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -6,13 +6,5 @@
     background-repeat: no-repeat;
     background-image: url("../assets/fondo-principal.avif");
     background-size: cover;
-}
-
-.section-footer{
-    font-size: 1.5rem;
-    display: grid;
-    grid-template-columns: repeat(3,0.30fr);
-    grid-template-rows: repeat(1,0.2fr);
-    gap: 0.5rem;
-    margin-left: 0.5rem;
+    margin-bottom: 0;
 }
