correcion del full responsive y seccion sale

--- a/scss/layout/_aside.scss
+++ b/scss/layout/_aside.scss
@@ -23,4 +23,38 @@ aside {
         padding-bottom: 1rem;
         padding-left: 0.5rem;
     }
+
+    .filtro-sale{
+        text-transform: uppercase;
+        font-size: 1.8rem;
+        text-align: left;
+        border-bottom: black;
+        border-style: solid;
+        width: 10rem;
+        margin-top: 2rem;
+    }
+    .hot-sale-aside{
+        text-transform: uppercase;
+        font-size: 3.6rem;
+        text-align: left;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+    .adidas {
+        text-transform: uppercase;
+        font-size: 3.6rem;
+        text-align: left;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+    .filtro-adidas{
+        text-transform: uppercase;
+        font-size: 1.8rem;
+        text-align: left;
+        border-bottom: black;
+        border-style: solid;
+        width: 10rem;
+        margin-top: 2rem;
+    }
+    
 }
