--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Jolly+Lodger&display=swap");
-aside {
-  margin: 1rem;
-}
-aside .jordan-filtro {
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  text-align: left;
-  border-bottom: black;
-  border-style: solid;
-  width: 10rem;
-  margin-top: 2rem;
-}
-aside .nike {
-  text-transform: uppercase;
-  font-size: 3.6rem;
-  text-align: left;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-}
-aside li {
-  padding-bottom: 1rem;
-  padding-left: 0.5rem;
-}
-
-footer {
-  background-color: rgb(23, 23, 23);
-  font-size: 1.6rem;
-  display: flex;
-  flex-direction: column;
-  padding-top: 1rem;
-  color: white;
-  line-height: 3rem;
-}
-footer a {
-  color: white;
-}
-footer li {
-  list-style: none;
-  padding-top: 1rem;
-}
-
 header {
   margin: 0;
 }
@@ -73,12 +32,60 @@ header .navbar a {
   text-decoration: none;
 }
 
-.adidas {
+aside {
+  margin: 1rem;
+}
+aside .jordan-filtro {
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  text-align: left;
+  border-bottom: black;
+  border-style: solid;
+  width: 10rem;
+  margin-top: 2rem;
+}
+aside .nike {
+  text-transform: uppercase;
+  font-size: 3.6rem;
+  text-align: left;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+aside li {
+  padding-bottom: 1rem;
+  padding-left: 0.5rem;
+}
+aside .filtro-sale {
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  text-align: left;
+  border-bottom: black;
+  border-style: solid;
+  width: 10rem;
+  margin-top: 2rem;
+}
+aside .hot-sale-aside {
   text-transform: uppercase;
   font-size: 3.6rem;
   text-align: left;
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+aside .adidas {
+  text-transform: uppercase;
+  font-size: 3.6rem;
+  text-align: left;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+aside .filtro-adidas {
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  text-align: left;
+  border-bottom: black;
+  border-style: solid;
+  width: 10rem;
+  margin-top: 2rem;
 }
 
 .section-adidas div {
@@ -87,26 +94,12 @@ header .navbar a {
   border-style: solid;
   box-shadow: 0.3rem 0.3rem 0.5rem grey;
   font-size: 1.4rem;
-  width: 30rem;
-}
-
-.adidas-negro {
-  height: 30rem;
+  width: 25rem;
 }
 
 .section-adidas h3 {
   text-transform: capitalize;
   font-size: 1.6rem;
-}
-
-.filtro-adidas {
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  text-align: left;
-  border-bottom: black;
-  border-style: solid;
-  margin-right: 170rem;
-  margin-top: 2rem;
 }
 
 .section-adidas img {
@@ -117,7 +110,6 @@ header .navbar a {
 
 main {
   font-size: 1.6rem;
-  padding-bottom: 3rem;
 }
 main .logo {
   width: 10%;
@@ -128,30 +120,33 @@ main a {
   color: black;
 }
 
-.Hot-Sale {
-  text-transform: uppercase;
-  font-size: 3.6rem;
-  text-align: left;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+main .section-hot-sale {
+  padding-bottom: 3rem;
 }
-
-.section-hot-sale div {
-  margin: 2rem;
+main .section-hot-sale div {
   border-color: black;
   border-style: solid;
   box-shadow: 0.3rem 0.3rem 0.5rem grey;
-  width: 30rem;
+  width: 100%;
   font-size: 1.4rem;
 }
-
-.section-hot-sale img {
+main .section-hot-sale img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 75%;
 }
-
-.hot-sale-p {
+main .section-hot-sale h2 {
+  padding-bottom: 0.5rem;
+  padding-left: 0.25rem;
+}
+main .section-hot-sale h3 {
+  text-transform: capitalize;
+  font-size: 1.6rem;
+}
+main .section-hot-sale p {
+  font-size: 1.2rem;
+}
+main .hot-sale-p {
   text-decoration: line-through;
   font-size: 1.1rem;
 }
@@ -164,17 +159,20 @@ main a {
   background-repeat: no-repeat;
   background-image: url("../assets/fondo-principal.avif");
   background-size: cover;
+  margin-bottom: 0;
 }
 
-main {
-  padding-bottom: 3rem;
-}
 main .zapas-nike div {
   border-color: black;
   border-style: solid;
   box-shadow: 0.3rem 0.3rem 0.5rem grey;
-  width: 30rem;
+  width: 90%;
   font-size: 1.4rem;
+}
+main .zapas-nike img {
+  object-fit: cover;
+  width: 100%;
+  height: 68%;
 }
 main .zapas-nike h2 {
   padding-bottom: 0.5rem;
@@ -188,61 +186,23 @@ main .zapas-nike p {
   font-size: 1.2rem;
 }
 
-@media (max-width: 425px) {
-  .navbar {
-    flex-direction: column;
-    align-items: center;
-    font-size: 2.4rem;
-  }
-  .hero {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 0.35fr);
-    grid-template-areas: "header" "aside" "main" "main" "main" "footer ";
-  }
-  .nike {
-    font-size: 2.4rem;
-  }
-  .zapas-nike {
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    grid-template-areas: "im1" "im2" "im3" "im4";
-  }
-  .section-footer {
-    font-size: 1rem;
-    display: grid;
-    grid-template-columns: repeat(3, 0.3fr);
-    grid-template-rows: repeat(1, 0.2fr);
-    gap: 0.5rem;
-    margin-left: 0.5rem;
-  }
+footer {
+  background-color: rgb(23, 23, 23);
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+  color: white;
+  line-height: 3rem;
 }
-@media (max-width: 768px) {
-  .navbar {
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 2.8rem;
-  }
-  .hero {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 0.35fr);
-    grid-template-areas: "header header" "aside aside" "main main" "main main" "main main" "footer footer";
-  }
-  .zapas-nike {
-    margin-left: 1rem;
-    gap: 1rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "im1 im2" "im3 im4";
-  }
-  .section-footer {
-    font-size: 1.5rem;
-    display: grid;
-    grid-template-columns: repeat(3, 0.3fr);
-    grid-template-rows: repeat(1, 0.2fr);
-    gap: 0.5rem;
-    margin-left: 0.5rem;
-  }
+footer a {
+  color: white;
 }
+footer li {
+  list-style: none;
+  padding-top: 1rem;
+}
+
 .info {
   grid-column-start: 1;
   grid-column-end: 2;
@@ -274,6 +234,251 @@ main .zapas-nike p {
 
 html {
   font-size: 62.5%;
+}
+
+.hero {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 0.5fr);
+  grid-template-areas: "header header header header" "aside main main main" "aside main main main" "aside main main main" "footer footer footer footer";
+}
+
+header {
+  grid-area: header;
+}
+
+aside {
+  grid-area: aside;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+}
+
+.zapas-nike {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 0.5fr);
+  grid-template-areas: "im1 . im2" "p   .  k" "im3 . im4";
+}
+
+.img1 {
+  grid-area: im1;
+}
+
+.img2 {
+  grid-area: im2;
+}
+
+.img3 {
+  grid-area: im3;
+}
+
+.img4 {
+  grid-area: im4;
+}
+
+.main {
+  padding-bottom: 3rem;
+}
+
+.section-footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 0.2fr);
+  gap: 0.5rem;
+}
+
+.info {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  justify-self: center;
+}
+
+.red {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  justify-self: center;
+}
+
+.cliente {
+  justify-self: center;
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+.container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.section-hot-sale {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 0.5fr);
+  grid-template-areas: "img1 . img2" "ps   .  ks" "img3 . img4";
+}
+
+.im1 {
+  grid-area: img1;
+}
+
+.im2 {
+  grid-area: img2;
+}
+
+.im3 {
+  grid-area: img3;
+}
+
+.im4 {
+  grid-area: img4;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 2.8rem;
+  }
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+  .hero {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 0.35fr);
+    grid-template-areas: "header header" "aside aside" "main main" "main main" "main main" "footer footer";
+  }
+  .zapas-nike {
+    margin-top: 10rem;
+    margin-left: 1rem;
+    gap: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "im1 im2" "im3 im4";
+  }
+  .zapas-nike img {
+    width: 100%;
+  }
+  .section-footer {
+    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 0.3fr);
+    grid-template-rows: repeat(1, 0.2fr);
+    gap: 0.5rem;
+    margin-left: 0.5rem;
+  }
+}
+.section-hot-sale {
+  margin-top: 0;
+  margin-left: 0;
+  gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas: "img1 img2" "img3 img4";
+}
+
+.section-hot-sale div {
+  gap: 1rem;
+}
+
+.im1 {
+  grid-area: img1;
+}
+
+.im2 {
+  grid-area: img2;
+}
+
+.im3 {
+  grid-area: img3;
+}
+
+.im4 {
+  grid-area: img4;
+}
+
+@media (max-width: 425px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navbar li {
+    font-size: 2rem;
+  }
+  .hero {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 0.35fr);
+    grid-template-areas: "header" "aside" "main" "main" "main" "footer ";
+  }
+  .nike {
+    font-size: 2rem;
+  }
+  .zapas-nike {
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    grid-template-areas: "im1" "im2" "im3" "im4";
+  }
+  .section-hot-sale {
+    margin-top: 0;
+    margin-left: 0;
+    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "img1" "img2" "img3" "img4";
+  }
+  .section-footer {
+    font-size: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 0.3fr);
+    grid-template-rows: repeat(1, 0.2fr);
+    gap: 0.5rem;
+    margin-left: 0.5rem;
+  }
+}
+@media (max-width: 768px) {
+  header {
+    margin: 0;
+  }
+  header h1 {
+    text-align: center;
+    font-size: 8.5rem;
+    background-color: black;
+    padding: 1rem;
+    margin-bottom: 0;
+  }
+  .navbar {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 2.8rem;
+  }
+  .hero {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 0.35fr);
+    grid-template-areas: "header" "aside" "main" "main" "main" "footer";
+  }
+}
+aside .nike {
+  font-size: 2.8rem;
+}
+aside .hot-sale-aside {
+  font-size: 2.8rem;
+}
+
+main .section-hot-sale div {
+  border-color: black;
+  border-style: solid;
+  box-shadow: 0.3rem 0.3rem 0.5rem grey;
+  width: 100%;
+  font-size: 1.1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
