--- a/scss/layout/_main-hot-sale.scss
+++ b/scss/layout/_main-hot-sale.scss
@@ -1,28 +1,35 @@
-.Hot-Sale {
-    text-transform: uppercase;
-    font-size: 3.6rem;
-    text-align: left;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+main {
+
+    .section-hot-sale {
+        div {
+            border-color: black;
+            border-style: solid;
+            box-shadow: 0.3rem 0.3rem 0.5rem grey;
+            width: 100%;
+            font-size: 1.4rem;
+        }
+img{
+    object-fit: cover;
+    width: 100%;
+    height: 75%;
 }
+        h2 {
+            padding-bottom: 0.5rem;
+            padding-left: 0.25rem;
+        }
 
-.section-hot-sale div {
-    margin: 2rem;
-    border-color: black;
-    border-style: solid;
-    box-shadow: 0.3rem 0.3rem 0.5rem grey;
-    width: 30rem;
-    font-size: 1.4rem;
-}
+        h3 {
+            text-transform: capitalize;
+            font-size: 1.6rem;
+        }
 
-.section-hot-sale img {
-object-fit: cover;
-width: 100%;
-height: 100%;
-}
-
-
+        p {
+            font-size: 1.2rem;
+        }
+        padding-bottom: 3rem;
+    }
 .hot-sale-p {
     text-decoration: line-through;
     font-size: 1.1rem;
+}
 }
