--- a/scss/layout/_main-nike.scss
+++ b/scss/layout/_main-nike.scss
@@ -1,13 +1,18 @@
 main {
+
     .zapas-nike {
         div {
             border-color: black;
             border-style: solid;
             box-shadow: 0.3rem 0.3rem 0.5rem grey;
-            width: 30rem;
+            width: 90%;
             font-size: 1.4rem;
         }
-
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 68%;
+        }
         h2 {
             padding-bottom: 0.5rem;
             padding-left: 0.25rem;
@@ -21,5 +26,6 @@ main {
         p {
             font-size: 1.2rem;
         }
+
     }
 }
