--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -5,9 +5,15 @@
         font-size: 2.8rem;
     }
 
+img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
     .hero{
         grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(4,0.35fr);
+        grid-template-rows: repeat(5,0.35fr);
         grid-template-areas: 
         "header header"
         "aside aside"
@@ -17,13 +23,19 @@
         "footer footer"
     }
     .zapas-nike{
+        margin-top: 10rem;
         margin-left: 1rem;
         gap: 1rem;
 grid-template-columns: repeat(2,1fr);
-grid-template-rows: repeat(3,1fr);
+grid-template-rows: repeat(2,1fr);
 grid-template-areas: 
 "im1 im2"
 "im3 im4"
+}
+
+
+.zapas-nike img{
+    width: 100%;
 }
 
 .section-footer{
@@ -35,3 +47,33 @@ grid-template-areas:
     margin-left: 0.5rem;
 }
 }
+.section-hot-sale{
+    margin-top: 0;
+    margin-left: 0;
+    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-template-areas: 
+    "img1 img2"
+    "img3 img4"
+}
+
+.section-hot-sale div{
+    gap: 1rem;
+}
+.im1{
+    grid-area: img1;
+    }
+    
+    .im2{
+    grid-area: img2;
+    }
+    
+    .im3{
+        grid-area: img3;
+    }
+    
+    .im4{    
+        grid-area: img4;
+    }
