--- a/scss/layout/_main-adidas.scss
+++ b/scss/layout/_main-adidas.scss
@@ -2,7 +2,7 @@
 
 .section-adidas div {
     margin: 2rem;
-    border-color: black;
+    border-color: $color-principal;
     border-style: solid;
     box-shadow: 0.3rem 0.3rem 0.5rem grey;
     font-size: 1.4rem;
