--- a/css/style.css
+++ b/css/style.css
@@ -35,15 +35,6 @@ header .navbar a {
 aside {
   margin: 1rem;
 }
-aside .jordan-filtro {
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  text-align: left;
-  border-bottom: black;
-  border-style: solid;
-  width: 10rem;
-  margin-top: 2rem;
-}
 aside .nike {
   text-transform: uppercase;
   font-size: 3.6rem;
@@ -55,7 +46,7 @@ aside li {
   padding-bottom: 1rem;
   padding-left: 0.5rem;
 }
-aside .filtro-sale {
+aside .filtro-sale, aside .filtro-adidas, aside .jordan-filtro {
   text-transform: uppercase;
   font-size: 1.8rem;
   text-align: left;
@@ -64,30 +55,13 @@ aside .filtro-sale {
   width: 10rem;
   margin-top: 2rem;
 }
-aside .hot-sale-aside {
+aside .adidas, aside .hot-sale-aside {
   text-transform: uppercase;
   font-size: 3.6rem;
   text-align: left;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-aside .adidas {
-  text-transform: uppercase;
-  font-size: 3.6rem;
-  text-align: left;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-aside .filtro-adidas {
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  text-align: left;
-  border-bottom: black;
-  border-style: solid;
-  width: 10rem;
-  margin-top: 2rem;
-}
-
 .section-adidas div {
   margin: 2rem;
   border-color: black;
