--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,13 +1,12 @@
 footer{
         background-color: rgb(23, 23, 23);
     font-size: 1.6rem;
-    display: flex;
-    flex-direction: column;
+@include flex;
     padding-top: 1rem;
-    color: white;
+    color: $color-secundario;
     line-height: 3rem;
     a{
-        color: white;
+        color: $color-secundario;
     }
     li{
         list-style: none;
