--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,9 +16,7 @@ header{
         background-color: rgb(23, 23, 23);
         font-size: 4.8rem;
         margin: 0;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+@include flexb;
         a {
             color: $color-secundario;
         }
