--- a/scss/layout/_main-hot-sale.scss
+++ b/scss/layout/_main-hot-sale.scss
@@ -2,7 +2,7 @@ main {
 
     .section-hot-sale {
         div {
-            border-color: black;
+            border-color: $color-principal;
             border-style: solid;
             box-shadow: 0.3rem 0.3rem 0.5rem grey;
             width: 100%;
